<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_doc"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/drawer_new_doc" />
        <item
            android:id="@+id/nav_sel_doc"
            android:icon="@drawable/ic_format_list_bulleted_white_24dp"
            android:title="@string/drawer_sel_doc" />
        <item
            android:id="@+id/nav_del_doc"
            android:icon="@drawable/ic_delete_white_24dp"
            android:title="@string/drawer_del_doc" />
        <item
            android:id="@+id/nav_prt_doc"
            android:icon="@drawable/ic_print_white_24dp"
            android:title="@string/drawer_prt_doc" />
        <item
            android:id="@+id/nav_pdf_doc"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/drawer_pdf_doc" />
    </group>



</menu>
