<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                style="@style/LightCardView">
                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="30sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/github"/>
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:linksClickable="true"
                        android:autoLink="web"
                        android:text="@string/github_link"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/LightCardView">
                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="30sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/third_party_library"/>
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jsoup_title"/>
                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jsoup_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />
        </LinearLayout>
</ScrollView>