<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/LightRecyclerCardView">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:id="@+id/hoursCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

      <TextView
        android:id="@+id/department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/department" />

      <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

      <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

      <TextView
        android:id="@+id/unconfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_error_outline_white_24dp"
        android:drawableTint="#FFBF00"
        android:text="@string/unconfirmed"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="#FFBF00"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time" />

      <TextView
        android:id="@+id/confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mood_white_24dp"
        android:drawableTint="#00A572"
        android:text="@string/confirmed"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="#00A572"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time" />


      <LinearLayout
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/image_view_desc"
          android:src="@drawable/ic_cancel_white_24dp"
          android:tint="#FF2400" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/error_colon"
          android:textAppearance="@android:style/TextAppearance.Material.Medium"
          android:textColor="#FF2400" />

        <TextView
          android:id="@+id/error_msg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@android:style/TextAppearance.Material.Medium"
          android:textColor="#FF2400" />
      </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <View
      android:id="@+id/divider"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:background="#D3D3D3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/container" />

    <Button
      android:id="@+id/delete"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:backgroundTint="#FFFFFF"
      android:text="@string/delete"
      android:textColor="#FF5252"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
      android:id="@+id/edit"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="#FFFFFF"
      android:text="@string/edit"
      android:textColor="#009688"
      app:layout_constraintEnd_toStartOf="@id/delete"
      app:layout_constraintTop_toBottomOf="@id/divider" />

  </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>