<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewDocFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/cautionCard"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LightCardView">
                <android.support.constraint.ConstraintLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/caution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textAppearance="@android:style/TextAppearance.Material.Large"
                        android:text="@string/caution"
                        />
                    <TextView
                        android:id="@+id/cautionItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/caution"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/caution_items"
                        />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@id/cautionCard"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.CardView
                app:layout_constraintTop_toBottomOf="@id/recyclerView"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/hoursCard"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LightCardView">
                <android.support.constraint.ConstraintLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/hoursCountStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_count"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <TextView
                        android:id="@+id/hoursCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="XX"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="8dp"

                        app:layout_constraintStart_toEndOf="@id/hoursCountStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Large"
                        android:textColor="#009688" />
                    <TextView
                        android:id="@+id/hoursCountEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hours"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/hoursCount"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/clearAllCard"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="#FF2400"
                style="@style/LightCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hoursCard">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_all"
                        android:textAppearance="@android:style/TextAppearance.Material.Large"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/submitCard"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/colorAccent"
                style="@style/LightCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clearAllCard">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:textAppearance="@android:style/TextAppearance.Material.Large"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintTop_toBottomOf="@+id/submitCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_white_24dp" />



</android.support.constraint.ConstraintLayout>